# projectm-sys

./: .gitignore  Cargo.toml  README.md  build.rs  build_bindgen.rs  emscripten.sh
.cargo/: linker-emscripten
.github/workflows/: build_emscripten.yml  build_linux.yml
bindgen/: default.h  playlist.h
src/: bindings.rs
