[package]
name = "projectm-sys"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
authors = ["AnomieVision <anomievision@gmail.com.com>"]
description = "Bindings for ProjectM"
license = "	LGPL-3.0-or-later"
repository = "https://github.com/anomievision/projectm-sys"
keywords = ["visualization", "audio", "sound",  "projectm"]
categories = ["multimedia", "multimedia::video", "multimedia::audio"]
readme = "README.md"
links = "libprojectm"

[dependencies]

[build-dependencies]
cmake = "0.1.48"
bindgen = "0.60.1"